testing ci process

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "migrate:test": "npx prisma migrate deploy",
     "test": "jest --runInBand --logHeapUsage"
   },
   "repository": {
