--- a/.github/workflows/eslint-unittest.yml
+++ b/.github/workflows/eslint-unittest.yml
@@ -1,14 +1,15 @@
 name: Lint & Unit Test
 
 on:
-  pull_request:
-    types: [opened, edited, synchronize, reopened]
+  push:
+    branches:
+      - main
 
 jobs:
   ci_matrix:
     strategy:
       matrix:
-        test_name: [test:partOne, test:partTwo, test:partThree]
+        test_name: [test-partOne, test-partTwo, test-partThree]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
